--- a/templates/home.html
+++ b/templates/home.html
@@ -15,7 +15,7 @@
 
        {%for sight in object_list %}
        <a href="{{sight.get_absolute_url}}">
-         
+         <div class="slider__item">
              <img src="{{sight.img.url}}" alt="" class="slider__image">
 
            <div class="slider__year">{{sight.year}}</div>
