--- a/templates/registration/password_reset_confirm.html
+++ b/templates/registration/password_reset_confirm.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
-
+{% load static %}
 {% block content %}
-
+<link rel="stylesheet" href="{% static 'css/password_reserve.css' %}"/>
     {% if validlink %}
         <p>Please enter (and confirm) your new password.</p>
         <form action="" method="post">
@@ -19,7 +19,7 @@
                 </tr>
                 <tr>
                     <td></td>
-                    <td><input type="submit" value="Change my password" /></td>
+                    <td> <button  type="submit" class="butn-signup">Change my password</button></td>
                 </tr>
             </table>
         </form>
