--- a/templates/registration/password_reset_done.html
+++ b/templates/registration/password_reset_done.html
@@ -1,8 +1,11 @@
 {% extends 'base.html' %}
-
+{% load static %}
 {% block title %}Email Sent{% endblock %}
 
 {% block content %}
+<link rel="stylesheet" href="{% static 'css/password_reserve.css' %}"/>
+<div class="indent">
   <h1>Check your inbox.</h1>
-  <p>We've emailed you instructions for setting your password. You should receive the email shortly!</p>
+  <p>We've emailed you instructions for setting your password. You should receive the email shortly!</p>  
+</div>
 {% endblock %}
