--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -1,15 +1,23 @@
 {% extends 'base.html' %}
-
+{% load static %}
 {% block title %}Forgot Your Password?{% endblock %}
 
 {% block content %}
+<link rel="stylesheet" href="{% static 'css/password_reserve.css' %}"/>
+
+<div class="section_reset_password">
+
   <h1>Forgot your password?</h1>
   <p>Enter your email address below, and we'll email instructions for setting a new one.</p>
 
+<div class = butn-instructions>
   <form method="POST">
     {% csrf_token %}
     {% if form.email.errors %} {{ form.email.errors }} {% endif %}
         <p>{{ form.email }}</p>
-    <input type="submit" value="Send me instructions!">
+    
+  <button  type="submit" class="butn-signup">Send me instructions!</button>
   </form>
+  </div>
+  </div>
 {% endblock %}
