--- a/templates/account.html
+++ b/templates/account.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 
-{% block title %}FAQ{% endblock %}
+{% block title %}Account{% endblock %}
 
 {% block content %}
 <link rel="stylesheet" href="{% static 'css/style_account.css' %}"/><!-- string Prices-->
