--- a/templates/detail.html
+++ b/templates/detail.html
@@ -7,8 +7,15 @@
 
 {% block content %}
 <link rel="stylesheet" href="{% static 'css/detail.css' %}" />
-<div class="ok"><h1 class="ok">{{ object.price }}</h1>
+<div class="ok">
 <h1>{{ object.type }}</h1>
+<h1>{{ object.price }}</h1>
+<h1>{{ object.days }}</h1>
 </div>
+<form action="{% url 'add' object.id %}" method="post">
+  {% csrf_token %}
+  {{ form.as_p}}
+  <input type="submit" value="Add to cart">
+  </form>
 
 {% endblock %}
