--- a/templates/prices.html
+++ b/templates/prices.html
@@ -17,8 +17,8 @@
 <div class="day"> {{element.days}} Days</div>
 <div class = "price"> {{element.price}} ₴</div>
 <div class = "buy">
-<a class="gradient-btn_Prices"  href="{{element.get_absolute_url}}"  >Add to basket</a>
-<a class="gradient_btn_Prices"  href="{{element.get_absolute_url}}"  >Add to basket</a></div>
+<a class="gradient-btn_Prices"  href="{{element.get_absolute_url}}">Add to basket</a>
+<a class="gradient_btn_Prices"  href="{{element.get_absolute_url}}">Add to basket</a></div>
 </div>
  {% endfor %}
 
@@ -31,29 +31,23 @@
 
            <div class="slider__item">
               <h3 class="slider__title ">Exselent! </h3>
-              <div class="span slider__rating-label"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, <span id = "dots">...</span><span id = "more">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, .</span></p></div>
+              <div class="span slider__rating-label"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, <span id = "dots">...</span><span id = "more">Lorem ipsum dolor sit amet, consectetur  Excepteur sint occaecat cupidatat non proident, .</span></p></div>
       <button id = "bt" onclick="readMore()">More</button>
-      <div class="user_name">Davydova Olga</div>
+      <div class="user_name">Ivan Ivanov</div>
       <div class="slider__year">19.07.2019</div>
             </div>
 
            <div class="slider__item">
               <h3 class="slider__title ">Exselent! </h3>
-              <div class="span slider__rating-label"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, .<span id = "dots1">...</span><span id = "more1">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</span></p>
+              <div class="span slider__rating-label"><p>Lorem ipsum dolor sit amet, consectetur  .<span id = "dots1">...</span><span id = "more1">Lorem ipsum dolor sit amet, consectetur .</span></p>
       <button id = "bt1" onclick="readMore1()"> More</button></div>
-      <div class="user_name">Davydova Olga</div>
+      <div class="user_name">Ivan Ivanov</div>
       <div class="slider__year">19.07.2019</div>
             </div>
+    
       <div class="slider__item">
               <h3 class="slider__title ">Exselent! </h3>
-              <div class="span slider__rating-label"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed .<span id = "dots2">...</span><span id = "more2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. .</span></p>
-      <button id = "bt2" onclick="readMore2()"> More</button></div>
-      <div class="user_name">Davydova Olga</div>
-      <div class="slider__year">19.07.2019</div>
-            </div>
-      <div class="slider__item">
-              <h3 class="slider__title ">Exselent! </h3>
-              <div class="span slider__rating-label"><p>Lorem ipsum dolor sit aris nisi ut aliquip ex ea commodo consequat.  Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.<span id = "dots3">...</span><span id = "more3">Lorem ipsum dolor sit amet, .</span></p></div>
+              <div class="span slider__rating-label"><p>Lorem ipsum dolor sit aris nisi ut aliquip ex ea commodo consequat.  <span id = "dots3">...</span><span id = "more3">Lorem ipsum dolor sit amet, .</span></p></div>
       <button id = "bt3" onclick="readMore3()"> More</button>
       <div class="user_name">Davydova Olga</div>
       <div class="slider__year">19.07.2019</div>
