--- a/templates/account.html
+++ b/templates/account.html
@@ -5,8 +5,8 @@
 {% block title %}Account{% endblock %}
 
 {% block content %}
-<link rel="stylesheet" href="{% static 'css/style_account.css' %}"/><!-- string Prices-->
-<link rel="stylesheet" href="{% static 'css/style_buy_account.css' %}"><!-- string Prices-->
+<link rel="stylesheet" href="{% static 'css/style_account.css' %}"/>
+<link rel="stylesheet" href="{% static 'css/style_buy_account.css' %}">
 {% if user.is_authenticated %}
 <div class = "all">
     <div class ="aside_account">
@@ -42,7 +42,7 @@
 <div class = "All_ticket">Tickets</div>
       <div class = "ticket_LITE">
     <div class = "name_info">Lite</div>
-      <div class = "name_account surname_account">Olga Davydova</div>
+      <div class = "name_account surname_account">Ivan Ivanov</div>
     <div class="number_account">00011101</div>
     	<img src="{% static 'images/red.png' %}" height="30" width="50">
     <div class = "date">
@@ -52,7 +52,7 @@
     </div>
     <div class = "ticket_VIP">
   <div class = "name_info">VIP</div>
-    <div class = "name_account surname_account">Julia Kopysova</div>
+    <div class = "name_account surname_account">Fedor Fedotov</div>
   <div class="number_account">00011102</div>
     <img src="{% static 'images/red.png' %}" height="30" width="50">
   <div class = "date">
@@ -100,7 +100,7 @@
             <a class="gradient-btn_account"  href="">Confirm</a>
             <a class="gradient_btn_account"  href="">Confirm</a></div>
           </div>
- <div class="total_price">Total price: 5050950 ₴</div>
+ <div class="total_price">Total price: 500 ₴</div>
  <div class = "buy">
  <a class="gradient-btn_account"  href="">Buy</a>
  <a class="gradient_btn_account"  href="">Buy</a></div>Buy
@@ -116,7 +116,7 @@
           <div class = "History">
             <div class = "ticket_history">
           <div class = "name_info_history">Lite</div>
-            <div class = "name_account surname_account">Olga Davydova</div>
+            <div class = "name_account surname_account">Fedor Fedotov</div>
           <div class = "date_history">
           <div class = "start_date_history">21.12.2019</div>
             <div class = "end_date_history">23.12.2019</div>
@@ -124,7 +124,7 @@
           </div>
           <div class = "ticket_history">
         <div class = "name_info_history">Lite</div>
-          <div class = "name_account surname_account">Olga Davydova</div>
+          <div class = "name_account surname_account">Fedor Fedotov</div>
         <div class = "date_history">
         <div class = "start_date_history">21.12.2019</div>
           <div class = "end_date_history">23.12.2019</div>
@@ -132,7 +132,7 @@
         </div>
         <div class = "ticket_history">
       <div class = "name_info_history">Lite</div>
-        <div class = "name_account surname_account">Olga Davydova</div>
+        <div class = "name_account surname_account">Fedor Fedotov</div>
       <div class = "date_history">
       <div class = "start_date_history">21.12.2019</div>
         <div class = "end_date_history">23.12.2019</div>
@@ -140,7 +140,7 @@
       </div>
       <div class = "ticket_history">
     <div class = "name_info_history">Lite</div>
-      <div class = "name_account surname_account">Olga Davydova</div>
+      <div class = "name_account surname_account">Fedor Fedotov</div>
     <div class = "date_history">
     <div class = "start_date_history">21.12.2019   </div>
       <div class = "end_date_history">23.12.2019</div>
