--- a/templates/detail.html
+++ b/templates/detail.html
@@ -9,10 +9,10 @@
 <link rel="stylesheet" href="{% static 'css/detail.css' %}" />
 <div class="ok">
 <h1>{{ object.type }}</h1>
-<h1>{{ object.price }}</h1>
-<h1>{{ object.days }}</h1>
+<h1>{{ object.price }} ₴</h1>
+<h1>{{ object.days }} Days</h1>
 </div>
-<form action="{% url 'add' object.id %}" method="post">
+<form action="" method="post">
   {% csrf_token %}
   {{ form.as_p}}
   <input type="submit" value="Add to cart">
